--- a/Figure_5d_reproducibility.ipynb
+++ b/Figure_5d_reproducibility.ipynb
@@ -12,6 +12,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3800a787-f525-41d7-805c-4a7a44602607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scanpy==1.9.4 anndata==0.9.2 umap==0.5.3 numpy==1.23.5 scipy==1.10.1 pandas==2.1.0 scikit-learn==1.3.0 statsmodels==0.14.0 igraph==0.10.8 pynndescent==0.5.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc.settings.verbosity = 0\n",
+    "sc.logging.print_header()\n",
+    "sc.settings.set_figure_params(dpi=180)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "373e2f38-6859-4001-8c8c-b8dd74a28897",
    "metadata": {},
@@ -30,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f97f7aaf-ac23-4bda-bedd-75aaebc3a13e",
    "metadata": {},
    "outputs": [],
@@ -70,13 +90,13 @@
    "id": "4bcbde8e-7925-457e-8313-6f6b3552b8f9",
    "metadata": {},
    "source": [
-    "### Normalize and cluster\n",
+    "### Normalize and reduce dimensions\n",
     "Set var index to gene symbols. Normalize and scale data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c8262b43-d528-4dbb-a8c9-685ad3288fd6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "dcc98845-395c-46c8-9b48-d40b24faabcd",
    "metadata": {},
    "outputs": [
@@ -109,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f0ab25b2-bc8a-4969-a2ca-020104fbb528",
    "metadata": {},
    "outputs": [
@@ -138,12 +158,12 @@
    "id": "503db79a-df3a-4678-b9df-f6ac3366997d",
    "metadata": {},
    "source": [
-    "## Cluster and visualize"
+    "### Cluster and visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "40f1c8fb-62c7-4463-b22b-d5b3496b39ef",
    "metadata": {},
    "outputs": [],
@@ -155,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3828a15e-43b3-413f-9503-f9f4e43972a1",
    "metadata": {},
    "outputs": [
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "aaf83dbc-3ee9-4444-b964-d0d53ef4ad73",
    "metadata": {},
    "outputs": [
@@ -240,13 +260,20 @@
    ],
    "source": [
     "# Visualize author original cell type\n",
-    "sc._settings.ScanpyConfig(verbosity='error')\n",
     "sc.pl.umap(adata, color=['cell_type_broad','cell_type','author_cell_type'], legend_fontsize='xx-small', legend_loc='on data')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a644e813-318a-4869-8955-d7e95b9eea3f",
+   "metadata": {},
+   "source": [
+    "## Cell type persistency"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "5883ddc1-b306-4bdd-9269-aab0f0d042c5",
    "metadata": {},
    "outputs": [
@@ -271,7 +298,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "facfa782-792a-4a49-99c6-ae8e557239c6",
    "metadata": {},
    "outputs": [],
@@ -305,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "a67d533f-d876-469c-9e76-93767bd335fe",
    "metadata": {},
    "outputs": [
@@ -350,6 +377,7 @@
     }
    ],
    "source": [
+    "# Look at leider clusters and see the number of cell that have a consistent author defined cell annotation\n",
     "for k,v in immune_dict.items():\n",
     "    total_not_matching = 0\n",
     "    print(\"cluster assignment: {}\\t{}\".format(k,v))\n",
@@ -358,14 +386,6 @@
     "    print(\"cell type persistency: {}\\t{}\\t{}\".format(k, total_not_matching, len(adata.obs.loc[adata.obs['author_cell_type']==k])))\n",
     "    print(\"-----------\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f3fcccb-85a4-4395-8cd1-3f7c05ea3166",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
